syntax = "proto3";

package yandex.cloud.priv.ydb.v1;

import "ydb/public/api/client/yc_private/operation/operation.proto";

// A set of methods for managing operations that are asynchronous API requests.
service OperationService {
  // Returns the specified operation.
  rpc Get (GetOperationRequest) returns (.ydb.yc.priv.operation.Operation);
  rpc Cancel (CancelOperationRequest) returns (.ydb.yc.priv.operation.Operation);
}

message GetOperationRequest {
  // Required. ID of the operation to return.
  string operation_id = 1; // [(required) = true, (length) = "<=50"];
}

message CancelOperationRequest {
  // Required. ID of the operation to cancel.
  string operation_id = 1; // [(required) = true, (length) = "<=50"];
}
